fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ header {
 }
 
 header ul {
-    width: 20%;
+    width: 50%;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
